# nialov-py-template

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  README.rst  copier.yaml  devnoxfile.py  devtasks.py  flake.nix  noxfile.py  noxfile.py.tmpl  pre-commit.nix  pyproject.toml  pyproject.toml.tmpl  setup.cfg.tmpl  setup.py.tmpl  shell.nix  tasks.py  tasks.py.tmpl
.github/workflows/: codeql-analysis.yaml.tmpl  test-and-publish.yaml.tmpl  test-template.yml  test.yaml.tmpl
docs_src/: conf.py.tmpl
docs_src/notebooks/.ipynb_checkpoints/: fractopo_network_1-checkpoint.ipynb
template/: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.tmpl  CITATION.cff.tmpl  CONTRIBUTING.rst.jinja  README.rst.jinja  README.rst.tmpl  default.nix  dodo.py  dodo.py.tmpl  flake.nix  flake.nix.jinja  generate_citation.sh.tmpl  noxfile.py.tmpl  pre-commit.nix  pyproject.toml.jinja  pyproject.toml.tmpl  shell.nix  tasks.py.tmpl
template/.github/workflows/: main.yaml  main.yaml.tmpl  test-and-publish-doit.yaml.tmpl  test-and-publish.yaml.tmpl
template/[[ package ]]/: __init__.py.tmpl
template/docs_src/: conf.py.jinja  conf.py.tmpl  index.rst.jinja  index.rst.tmpl
template/examples/: README.rst.tmpl
template/tests/: _profile.py.jinja
template/{{package}}/: __init__.py.jinja
test_template/: .copier-answers.yml  Pipfile
test_template/mypackage/: __init__.py  cli.py  myscript.py
test_template/tests/: __init__.py  test_myscript.py
